# git-branch-cleanup

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  state.json
