[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-branch-cleanup"
version = "1.0.0"
description = "A CLI tool to detect merged branches, identify stale branches, and provide safe deletion with undo capability"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "sdotwinter", email = "sdotwinter@users.noreply.github.com"}
]
keywords = ["git", "branch", "cleanup", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.8"

[project.scripts]
git-branch-cleanup = "main:main"

[project.urls]
Homepage = "https://github.com/sdotwinter/git-branch-cleanup"
Repository = "https://github.com/sdotwinter/git-branch-cleanup"
Issues = "https://github.com/sdotwinter/git-branch-cleanup/issues"
